static/css/style.css
/* body */
body {
  max-width: 800px;
  margin: auto;
  padding: 1em;
  line-height: 1.4;
  overflow-y: scroll;
}

/* headers */
h1 { font-size: 1.7em }
h2, h3, h4 { margin: 1.5em auto 0.5em; }

/* header and footer areas */
.menu, .article-meta, footer { text-align: center; }
.menu {padding: 0;}
.menu li { display: inline-block; }
.menu a { text-decoration: none; }
.article-meta, .menu a, blockquote, table {
  background: #f9f9f9;
  border: 1px solid #aaa;
  box-shadow: 2px 2px #ddd;
  padding: 5px;
  margin: 4px;
}
hr {
  border-style: 1px solid #aaa;
  max-width: calc(100% - 10px);
}

/* links */
a, footer a { color: royalblue; }
*:target { background-color: gold; }
a:hover{
  color: white;
  background-color: royalblue;
} 
sup {
  vertical-align: top;
  font-size: 0.8em;
}

sub {
  vertical-align: bottom;
  font-size: 0.8em;
}

/* code */
pre {
  border: 1px solid #aaa;
  box-shadow: 2px 2px #ddd;
  padding: 1em;
  margin: 4px;
  overflow-x: auto;
  line-height: 1.3;
}
code { background: #ddd; }
pre code {
  background: none;
  font-size: 80%;
}

/* misc elements */
img, figure, iframe, video, .responsive-image { max-width: 100%; height: auto; }
main { hyphens: auto; }
blockquote {
  border-left: 4px solid #777;
  padding: 3px 1em;
  font-size: 80%;
}

ul {
  list-style-type: square;
}

ul li li {
  list-style-type: none;
  position: relative;
}

ul li li::before {
  content: "└─";
  position: absolute;
  left: -1.5em;
}

.responsive-image img {
  width: 100%;
  height: auto;
}

/* figure and captions */
figure { 
  position: relative;
  margin: 0;
}
figure figcaption, .imgCaption {
  color: black;
  text-align: right;
  padding: 10px;
  font-size: 80%;

}

/* table */
table {
  margin: auto;
  border-left: 4px solid #777;
  background: #fff;
  max-width: calc(100% - 10px);
  border-collapse: collapse;
}
table thead th {
  border-bottom: 1px solid #777;
  vertical-align: middle;
}
th, td { padding: 5px; border: 1px dotted #777}
thead, tfoot, tr:nth-child(even) { background: #eee; }

/* For low resolution widths */
@media (max-width: 500px) { 
    .posts-list {
        white-space: nowrap;
        overflow-x: auto;
        font-size: 80%;
    }
}

